set(TESTNGRAM_SRC ngramTest.cpp)
set(TESTCONNECT_SRC connect.cpp)
set(TESTMSYQL_SRC mysqlTest.cpp)
set(TESTFRISO_SRC frisoTest.cpp)
set(TESTPOSTING_SRC PostingListTest.cpp)
set(TESTJSON_SRC jsonTest.cpp)
set(TESTSUBSTR_SRC substrTest.cpp)
set(TESTSERVERSOCKET_SRC serverSocketTest.cpp)
set(TESTCLIENTSOCKET_SRC clientSocketTest.cpp)

SET(CMAKE_BUILD_TYPE "Debug")  
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")  

#place executable file into test directory
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/test/bin)
add_executable(connectTest ${TESTCONNECT_SRC})
add_executable(mysqlTest ${TESTMSYQL_SRC})
add_executable(ngramTest ${TESTNGRAM_SRC})
add_executable(frisoTestC ${TESTFRISO_SRC})
add_executable(postingListTest ${TESTPOSTING_SRC})
add_executable(jsonTest ${TESTJSON_SRC})
add_executable(substrTest ${TESTSUBSTR_SRC})
add_executable(serverSocketTest ${TESTSERVERSOCKET_SRC})
add_executable(clientSocketTest ${TESTCLIENTSOCKET_SRC})


#set shared library for connectTest and mysqlTest and ngramTest
link_directories(${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(connectTest libmysqlcppconn.so)
target_link_libraries(mysqlTest libmysqlcppconn.so)
target_link_libraries(ngramTest searchEngine)
target_link_libraries(frisoTestC searchEngine)
target_link_libraries(postingListTest searchEngine)
target_link_libraries(substrTest searchEngine)
target_link_libraries(serverSocketTest socket)
target_link_libraries(clientSocketTest socket)