set(TESTNGRAM_SRC ngramTest.cpp)
set(TESTCONNECT_SRC connect.cpp)
set(TESTMSYQL_SRC mysqlTest.cpp)
set(TESTFRISO_SRC frisoTest.cpp)
set(TESTPOSTING_SRC PostingListTest.cpp)
set(TESTJSON_SRC jsonTest.cpp)
set(TESTSUBSTR_SRC substrTest.cpp)
set(TESTSERVERSOCKET_SRC serverSocketTest.cpp)
set(TESTCLIENTSOCKET_SRC clientSocketTest.cpp)
set(TESTSOCKETSTREAMPARSER_SRC SocketStreamParserTest.cpp)
set(TESTFASTHTMLANALYSIS_SRC fastHtmlAnalysisTest.cpp)
set(TESTIMPROVEDHTML_SRC improvedHtmlAnalysisTest.cpp)
set(TESTHTMLFORMAT_SRC htmlFormatTest.cpp)
set(TESTSIMHASH_SRC simHashTest.cpp)
set(TESTDOCUMENTENTRY_SRC documentEntryTest.cpp)
set(TestFormatedDocumentEntry_SRC formatedDocumentEntryTest.cpp)


#place executable file into test directory
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/test/bin)
add_executable(connectTest ${TESTCONNECT_SRC})
add_executable(mysqlTest ${TESTMSYQL_SRC})
add_executable(ngramTest ${TESTNGRAM_SRC})
add_executable(frisoTestC ${TESTFRISO_SRC})
add_executable(postingListTest ${TESTPOSTING_SRC})
add_executable(jsonTest ${TESTJSON_SRC})
add_executable(substrTest ${TESTSUBSTR_SRC})
add_executable(serverSocketTest ${TESTSERVERSOCKET_SRC})
add_executable(clientSocketTest ${TESTCLIENTSOCKET_SRC})
add_executable(socketStreamParserTest ${TESTSOCKETSTREAMPARSER_SRC})
add_executable(fastHtmlAnalysisTest ${TESTFASTHTMLANALYSIS_SRC})
add_executable(improvedHtmlAnalysisTest ${TESTIMPROVEDHTML_SRC})
add_executable(htmlFormatTest ${TESTHTMLFORMAT_SRC})
add_executable(simHashTest ${TESTSIMHASH_SRC})
add_executable(documentEntryTest ${TESTDOCUMENTENTRY_SRC})
add_executable(formatedDocumentEntryTest ${TestFormatedDocumentEntry_SRC})


#set shared library for connectTest and mysqlTest and ngramTest
link_directories(${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(connectTest libmysqlcppconn.so)
target_link_libraries(mysqlTest libmysqlcppconn.so)
target_link_libraries(ngramTest searchEngine)
target_link_libraries(frisoTestC searchEngine)
target_link_libraries(postingListTest searchEngine)
target_link_libraries(substrTest searchEngine)
target_link_libraries(serverSocketTest socket)
target_link_libraries(clientSocketTest socket)
target_link_libraries(socketStreamParserTest searchEngine socket)
target_link_libraries(fastHtmlAnalysisTest searchEngine)
target_link_libraries(improvedHtmlAnalysisTest searchEngine)
target_link_libraries(htmlFormatTest searchEngine)
target_link_libraries(simHashTest searchEngine)
target_link_libraries(formatedDocumentEntryTest searchEngine socket)
target_link_libraries(documentEntryTest searchEngine socket)