cmake_minimum_required(VERSION 2.6)
#place document parser shared library into lib directory
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
add_library (libdocumentParser SHARED ${LIB_SRC})
add_library(libdocumentParser_static STATIC ${LIB_SRC})
set_target_properties(libdocumentParser PROPERTIES CLEAN_DIRECT_OUT 1)
set_target_properties(libdocumentParser PROPERTIES VERSION 1.0 SOVERSION 1)
set_target_properties(libdocumentParser_static PROPERTIES OUTPUT_NAME "libdocumentParser")
set_target_properties(libdocumentParser_static PROPERTIES CLEAN_DIRECT_OUT 1)
INSTALL(TARGETS libdocumentParser libdocumentParser_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES DocumentParser.h DESTINATION include/documentParser)