set(FRISO_SRC friso.cpp friso_array.cpp friso_ctype.cpp friso_GBK.cpp friso_hash.cpp friso_lexicon.cpp friso_lexicon.cpp friso_link.cpp friso_string.cpp friso_UTF8.cpp)
SET(CMAKE_BUILD_TYPE "Debug")  
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")  
#place shared and static library file into lib directory
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
add_library (friso SHARED ${FRISO_SRC})
add_library(friso_static STATIC ${FRISO_SRC})
set_target_properties(friso PROPERTIES CLEAN_DIRECT_OUT 1)
set_target_properties(friso PROPERTIES VERSION 1.0 SOVERSION 1)
set_target_properties(friso_static PROPERTIES OUTPUT_NAME "friso")
set_target_properties(friso_static PROPERTIES CLEAN_DIRECT_OUT 1)
INSTALL(TARGETS friso friso_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES friso.h friso_API.h friso_ctype.h DESTINATION include/friso)
